Bug 367690 - Git option in RMB is not available after click in any place of versioned file
Summary: Git option in RMB is not available after click in any place of versioned file
Status: RESOLVED FIXED
Alias: None
Product: kdevelop
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: kdevelop-bugs-null
URL:
Keywords: regression
: 368260 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-08-22 19:56 UTC by Piotr Mierzwinski
Modified: 2016-09-05 16:30 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.0.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Piotr Mierzwinski 2016-08-22 19:56:38 UTC
Several weeks ago after click by RMB in any place in versioned (by GIT) document was available option "Git". Recently this option is only available when we click in function name or member name or type of member. Click in other place shows menu without this option.

For me it looks like regression. I don't know is this feature or bug.

Reproducible: Always

Steps to Reproduce:
1. open any project versioned with git
2. click RMB in any place of document, skipping function name, member name, member type
3. check availability of "Git" option"

Actual Results:  
missing "Git" option in popping up menu invoked by RMB

Expected Results:  
"Git" option should be placed in this menu no matter where user click (by RMB) in document

kdevelop 5.0.0.r23419.7314e99  (built 22/08/2016, branch: 5.0)
kdevplatform 5.0.0.r13346.09a1848  (built 22/08/2016, branch: 5.0)
KFrameworks 5.25, Qt-5.7.0
Comment 1 Kevin Funk 2016-08-23 08:51:38 UTC
Hmm, indeed. It's no longer there.

Not sure what caused the change.
Comment 2 Kevin Funk 2016-09-05 11:35:13 UTC
*** Bug 368260 has been marked as a duplicate of this bug. ***
Comment 3 Milian Wolff 2016-09-05 16:03:14 UTC
Git commit d641fca76215a7de01ee1bae59c6269e46c8da79 by Milian Wolff.
Committed on 05/09/2016 at 16:00.
Pushed by mwolff into branch '5.0'.

Properly initialize EditorContext::urls

Fixes querying the git plugin context menu from the editor context
menu, and elsewhere.

M  +5    -0    language/interfaces/editorcontext.cpp
M  +1    -0    language/interfaces/editorcontext.h

http://commits.kde.org/kdevplatform/d641fca76215a7de01ee1bae59c6269e46c8da79