Properly initialize EditorContext::urls

Fixes querying the git plugin context menu from the editor context
menu, and elsewhere.

BUG: 367690